--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="sub_title">
         29CM의 연말 시즈널리티 테마를 강조하여 패션, 잡화, 라이프, 뷰티 등<br>
         모든 카테고리가 참여하는 대형 기획전을 디자인합니다.<br>
-        해당 기획전의 타이틀 기획 및 디자인, 콘텐츠 페이지 구성을 제안합니다.
+        해당 기획전의 타이틀 기획 및 디자인, 콘텐츠 페이지 구성을 제안합니다.아
         </div>
         <div>
         <img src="img/coupon.png" class="main_coupon">
